# pycrusher

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
pycrusher/: __init__.py  __main__.py  _main.py  cli.py  core.py  name_generator.py
tests/: test_cli.py  test_core.py  utils.py
