[project]
name = "pycrusher"
version = "0.3.9"
description = "Generate lossy JPEG compressions for fun!"
readme = "README.md"
requires-python = ">=3.7"
authors = [
  { name = "Jones Martins", email = "15959626+jonesmartins@users.noreply.github.com" },
]
dependencies = ["pillow>=9.5.0", "tqdm>=4.66.5"]
keywords = ["jpeg", "image processing", "lossy compression"]
license = { text = "Apache 2.0" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Artistic Software",
  "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/jonsmartins/pycrusher"
Issues = "https://github.com/jonesmarints/pycrusher/issues"

[tool.uv]
dev-dependencies = [
  "hypothesis>=6.79.4",
  "mypy>=1.4.1",
  "pytest>=7.4.4",
  "types-colorama>=0.4.15.12",
  "types-pillow>=10.1.0.2",
  "types-pygments>=2.17.0.0",
  "types-setuptools>=69.0.0.0",
  "types-tqdm>=4.66.0.5",
]

[tool.setuptools.packages.find]
exclude = ["tests"]

[project.scripts]
pycrusher = "pycrusher.cli:main"
